refactor(auth): remove magic number & utilize apache.lang3